[21604] VFSServer refactor from URL to URI