@@ -2,7 +2,7 @@ package ch.elexis.core.services;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.InvalidPathException;
 
 import org.apache.commons.lang3.StringUtils;
@@ -15,22 +15,26 @@ import ch.elexis.core.utils.CoreUtil;
 public class VirtualFilesystemService implements IVirtualFilesystemService {
 	
 	@Override
-	public IVirtualFilesystemHandle of(String urlString) throws IOException{
+	public IVirtualFilesystemHandle of(String uriString) throws IOException{
 		
-		if (StringUtils.startsWith(urlString, "\\\\")) {
-			String replaced = urlString.replace("\\", "/");
+		if (StringUtils.startsWith(uriString, "\\\\")) {
+			String replaced = uriString.replace("\\", "/");
 			if (CoreUtil.isWindows()) {
 				// https://wiki.eclipse.org/Eclipse/UNC_Paths
-				urlString = "file://" + replaced;
+				uriString = "file://" + replaced;
 			} else {
-				urlString = "smb:" + replaced;
+				uriString = "smb:" + replaced;
 			}
 		}
 		
-		System.out.println("of "+urlString);
+		if (uriString.startsWith("/")) {
+			uriString = "file:" + uriString;
+		}
 		
-		URL url = assertUrl(urlString);
-		return new VirtualFilesystemHandle(url);
+		uriString = uriString.replaceAll(" ", "%20");
+		
+		URI uri = assertUri(uriString);
+		return new VirtualFilesystemHandle(uri);
 	}
 	
 	@Override
@@ -39,34 +43,33 @@ public class VirtualFilesystemService implements IVirtualFilesystemService {
 			return null;
 		}
 		
-		URL url = file.toURI().toURL();
-		return new VirtualFilesystemHandle(url);
+		URI uri = file.toURI();
+		return new VirtualFilesystemHandle(uri);
 	}
 	
-	private URL assertUrl(String urlString) throws IOException{
-		if (StringUtils.isBlank(urlString)) {
+	private URI assertUri(String uriString) throws IOException{
+		if (StringUtils.isBlank(uriString)) {
 			throw new IOException("urlString is null");
 		}
 		
-		URL url = isValidURL(urlString);
-		if (url != null) {
-			return url;
+		URI uri = isValidURI(uriString);
+		if (uri != null) {
+			return uri;
 		} else {
-			File file = new File(urlString);
+			File file = new File(uriString);
 			try {
 				file.toPath();
-				return file.toURI().toURL();
+				return file.toURI();
 			} catch (InvalidPathException e) {}
 			
 		}
 		
-		throw new IOException("Can not handle url string [" + urlString + "]");
+		throw new IOException("Can not handle uri string [" + uriString + "]");
 	}
 	
-	private URL isValidURL(String urlString){
+	private URI isValidURI(String uriString){
 		try {
-			URL url = new URL(urlString);
-			url.toURI();
+			URI url = new URI(uriString);
 			return url;
 		} catch (Exception exception) {
 			return null;
